force-app/main/default/objects/ES_Resource_Allocation__c/fields/Inspection_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Name__c</fullName>
    <formula>Inspection__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Name</label>
    <type>Text</type>
</CustomField>