force-app/main/default/objects/ES_Resource_Allocation__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>IF(ISBLANK(Inspection__r.Program_Text__c),&apos;Individual Inspections&apos;,Inspection__r.Program_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>