force-app/main/default/objects/ES_Resource_Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipName>Resource_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>