force-app/main/default/objects/ES_Resource_Allocation__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Owner__c</fullName>
    <formula>Inspection__r.Owner:User.FirstName + &apos; &apos; +  Inspection__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Owner</label>
    <type>Text</type>
</CustomField>