force-app/main/default/objects/ES_Resource_Allocation__c/fields/Resource_Availability__c.field-meta.xml
<CustomField>
    <fullName>Resource_Availability__c</fullName>
    <label>Resource Availability</label>
    <referenceTo>ES_Resource_Availability__c</referenceTo>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>