force-app/main/default/objects/ES_Resource_Allocation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ES_Roles</valueSetName>
    </valueSet>
</CustomField>