force-app/main/default/objects/ES_Resource_Allocation__c/listViews/My_allocated_projects.listView-meta.xml
<ListView>
    <fullName>My_allocated_Inspections</fullName>
    <columns>Inspection__c</columns>
    <columns>Program_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Allocated_to_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My allocated Inspections</label>
</ListView>